<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="587dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.472">

        <TextView
            android:id="@+id/OldNote"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/щдвТщеу" />

        <EditText
            android:id="@+id/EnterNewNoteText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enterNewNote"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/EnterNewNoteBtn"
            android:layout_width="179dp"
            android:layout_height="40dp"
            android:text="@string/enter" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>